Test/errors/err_lock_wrong_mutex.cb
// Accessing a guarded field while holding the WRONG lock.

import "mutex.cb";

struct Account {
    mutex mtxA = default;
    mutex mtxB = default;
    lock(mtxA) {
        int balance = default;
    }
};

expect_error("Field 'balance' is guarded by 'mtxA'") {
    void test() {
        Account a;
        lock(a.mtxB) {
            int v = a.balance;
        }
    }
}
